--- a/BackupBuddyV.2
+++ b/BackupBuddyV.2
@@ -1425,26 +1425,27 @@ def show_help():
           "between local and cloud-based systems.")
     print("It supports task scheduling using cron jobs and provides flexible settings "
           "to minimize API requests to cloud providers.\n")
+    print("BackupBuddy's default flags are set to minimize problems with providers such as Proton and Google\n")
     
     print("Key Features:")
-    print("1. **Create Backups:**")
+    print("1. Create Backups:")
     print("   Back up local files or folders to cloud storage or another local destination.")
-    print("2. **Restore Backups:**")
+    print("2. Restore Backups:")
     print("   Restore files from a backup to your desired destination.")
-    print("3. **Schedule Tasks:**")
+    print("3. Schedule Tasks:")
     print("   Set up cron jobs to automate backups and transfers.")
-    print("4. **Configure rclone Remotes:**")
+    print("4. Configure rclone Remotes:")
     print("   Manage cloud storage accounts and connections via rclone.")
-    print("5. **Optimize API Requests:**")
+    print("5. Optimize API Requests:")
     print("   Customize rclone flags such as `--tpslimit` and `--transfers` to avoid exceeding API limits.\n")
     
     print("Available Commands:")
-    print("1. **Create a Backup:** Guides you through creating a new backup task.")
-    print("2. **Create a Transfer Task:** Set up a task to transfer files between two destinations.")
-    print("3. **Restore a Backup:** Restore files from a previous backup.")
-    print("4. **Schedule Cron Jobs:** Create automated schedules to run backup and transfer tasks.")
-    print("5. **Manage Configurations:** View, edit, or delete existing settings and tasks.")
-    print("6. **Uninstall BackupBuddy:** Removes all files, logs, and settings related to BackupBuddy.\n")
+    print("1. Create a Backup: Guides you through creating a new backup task.")
+    print("2. Create a Transfer Task: Set up a task to transfer files between two destinations.")
+    print("3. Restore a Backup: Restore files from a previous backup.")
+    print("4. Schedule Cron Jobs: Create automated schedules to run backup and transfer tasks.")
+    print("5. Manage Configurations: View, edit, or delete existing settings and tasks.")
+    print("6. Uninstall BackupBuddy: Removes all files, logs, and settings related to BackupBuddy.\n")
     
     print("Example Customizable rclone Flags:")
     print("  --tpslimit <number>: Limits the number of API requests per second (default: 2).")
